--- a/NewScheduler/res/values/strings.xml
+++ b/NewScheduler/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">NewScheduler</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="_2015_11_25_n_">2015.11.25\\n오픈소스 프로젝트 진행하기</string>
 
 </resources>
