--- a/NewScheduler/res/values/strings.xml
+++ b/NewScheduler/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="plan_text_name">일정제목</string>
-    <string name="_2015_11_25_n_">2015.11.25\\n오픈소스 프로젝트 진행하기</string>
+    <string name="name">일정표</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_add_schedule">AddSchedule</string>
     <string name="title_activity_detail_schedule">DetailSchedule</string>
